# player1-workspace

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
JOURNAL/: 000-genesis.md  001-pdas-derivation-and-bump-seed-constraint.md  002-pdas-derivation-bump-seeds-and-the-seeds.md  003-pdas-derivation-canonical-bump-and-seeds.md  004-anchor-typescript-test-harness-compiles-.md  005-anchor-ts-test-harness-compiles-and-runs.md  006-pdas-derivation-canonical-bump-and-the-s.md  007-spl-token-mint-create-account-transfer.md  008-spl-token-mint-create-account-transfer.md  009-spl-token-mint-create-account-transfer.md  010-spl-token-mint-create-account-transfer.md  011-spl-token-mint-create-account-transfer-f.md  012-spl-token-transfer-with-verified-depende.md  013-spl-token-transfer-diagnose-and-fix-the-.md  014-spl-token-transfer-proven-without-the-so.md  015-cross-program-invocation-cpi-invoke-the-.md  016-anchor-account-constraints-has-one-and-o.md  017-custom-errors-require-and-graceful-failu.md  018-account-lifecycle-rent-space-realloc-and.md  019-vault-with-pda-authority-cpi-signer-seed.md
blog/: build.js  index.html
knowledge/: backlog.md  state.json
posts/: 005.code.json  006.code.json  014.code.json  015.code.json  016.code.json  017.code.json  018.code.json  019.code.json
programs/hello/: Cargo.toml
programs/hello/src/: lib.rs
tests/: config.ts  cpi_transfer.ts  errors.ts  hello.ts  init.ts  lifecycle.ts  pda.ts  proof_core.ts  spl_raw.ts  vault_pda.ts
