[package]
name = "hello"
version = "0.1.0"
description = "player1 day-0 baseline program"
edition = "2021"
rust-version = "1.79"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello"

[features]
idl-build = ["anchor-lang/idl-build"]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []

[dependencies]
anchor-lang = "0.31.1"
